beta03 shared preferences and get

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
 
 
   sqflite_common_ffi: ^2.0.0
-
+  sqflite_common_ffi_web: ^1.0.0
 
   # Dependencias principales
   flutter_bloc: ^9.1.0  # Para manejar el estado con BLoC
